# InvJac

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.full  Dockerfile.phc_build  Dockerfile.prebuilt_phc  Doxyfile  LICENSE  README.md  jac_conj_out.txt  out copy.txt  out.txt  test.txt
.github/workflows/: test.yml
docs/: index.html
docs/coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
docs/coverage_report/source/: application.hpp.func-c.html  application.hpp.func.html  application.hpp.gcov.html  checker.hpp.func-c.html  checker.hpp.func.html  checker.hpp.gcov.html  equation.cpp.func-c.html  equation.cpp.func.html  equation.cpp.gcov.html  equation.hpp.func-c.html  equation.hpp.func.html  equation.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  map.cpp.func-c.html  map.cpp.func.html  map.cpp.gcov.html  map.hpp.func-c.html  map.hpp.func.html  map.hpp.gcov.html  map_factory.cpp.func-c.html  map_factory.cpp.func.html  map_factory.cpp.gcov.html  (+27 more)
docs/html/: annotated.html  application_8hpp_source.html  checker_8hpp_source.html  classCheckResult-members.html  classCheckResult.html  classCheckResult__coll__graph.map  classCheckResult__coll__graph.md5  classCheckResult_ab914d3312511dc356af31e43ed7b1cf5_icgraph.map  classCheckResult_ab914d3312511dc356af31e43ed7b1cf5_icgraph.md5  classCheckResult_aba9dd5b6ed1fea5631b6b2721f0c1f39_cgraph.map  classCheckResult_aba9dd5b6ed1fea5631b6b2721f0c1f39_cgraph.md5  classCheckResult_aba9dd5b6ed1fea5631b6b2721f0c1f39_icgraph.map  classCheckResult_aba9dd5b6ed1fea5631b6b2721f0c1f39_icgraph.md5  classCheckResult_abb344684e272ccd953b9577bcdcda039_icgraph.map  classCheckResult_abb344684e272ccd953b9577bcdcda039_icgraph.md5  classChecker-members.html  classChecker.html  classChecker__coll__graph.map  classChecker__coll__graph.md5  classChecker_a5557d50dbd898a42629d367321fa4d7c_cgraph.map  classChecker_a5557d50dbd898a42629d367321fa4d7c_cgraph.md5  classChecker_a5557d50dbd898a42629d367321fa4d7c_icgraph.map  classChecker_a5557d50dbd898a42629d367321fa4d7c_icgraph.md5  classChecker_a6d1f44e90af6bd7279d82a2f5b8dc0a2_cgraph.map  classChecker_a6d1f44e90af6bd7279d82a2f5b8dc0a2_cgraph.md5  classChecker_a6d1f44e90af6bd7279d82a2f5b8dc0a2_icgraph.map  classChecker_a6d1f44e90af6bd7279d82a2f5b8dc0a2_icgraph.md5  classChecker_ad27c68388778a2a37c7a9589bc58c78e_cgraph.map  classChecker_ad27c68388778a2a37c7a9589bc58c78e_cgraph.md5  classChecker_ad27c68388778a2a37c7a9589bc58c78e_icgraph.map  classChecker_ad27c68388778a2a37c7a9589bc58c78e_icgraph.md5  classChecker_aff5e90958f5c3128c5979d4ca1b84c0a_icgraph.map  classChecker_aff5e90958f5c3128c5979d4ca1b84c0a_icgraph.md5  classEquation-members.html  classEquation.html  classEquation_1_1Solution-members.html  classEquation_1_1Solution.html  classEquation_1_1Solution__coll__graph.map  classEquation_1_1Solution__coll__graph.md5  classEquation_1_1Solution_ad846c8ff497fb25a85a195214ceed7ae_icgraph.map  (+329 more)
docs/latex/: annotated.tex  application_8hpp_source.tex  checker_8hpp_source.tex  classCheckResult.tex  classCheckResult__coll__graph.md5  classCheckResult_ab914d3312511dc356af31e43ed7b1cf5_icgraph.md5  classCheckResult_aba9dd5b6ed1fea5631b6b2721f0c1f39_cgraph.md5  classCheckResult_aba9dd5b6ed1fea5631b6b2721f0c1f39_icgraph.md5  classCheckResult_abb344684e272ccd953b9577bcdcda039_icgraph.md5  classChecker.tex  classChecker__coll__graph.md5  classChecker_a5557d50dbd898a42629d367321fa4d7c_cgraph.md5  classChecker_a5557d50dbd898a42629d367321fa4d7c_icgraph.md5  classChecker_a6d1f44e90af6bd7279d82a2f5b8dc0a2_cgraph.md5  classChecker_a6d1f44e90af6bd7279d82a2f5b8dc0a2_icgraph.md5  classChecker_ad27c68388778a2a37c7a9589bc58c78e_cgraph.md5  classChecker_ad27c68388778a2a37c7a9589bc58c78e_icgraph.md5  classChecker_aff5e90958f5c3128c5979d4ca1b84c0a_icgraph.md5  classEquation.tex  classEquation_1_1Solution.tex  classEquation_1_1Solution__coll__graph.md5  classEquation_1_1Solution_ad846c8ff497fb25a85a195214ceed7ae_icgraph.md5  classEquation_1_1Solution_ae18c7373473f299782964936de1e6a8a_icgraph.md5  classEquation__coll__graph.md5  classEquation_a28f78a59c69dfdc27b505afc1263e3cc_cgraph.md5  classEquation_a28f78a59c69dfdc27b505afc1263e3cc_icgraph.md5  classEquation_a8871fd36fb9bb10ec82a8922ad5fc009_cgraph.md5  classEquation_aa482c4069e842a458943b8f8a0cff355_cgraph.md5  classEquation_ab9bdba95839686a8c9e8f4fcd40c2d60_icgraph.md5  classEquation_ae57d9bce0f5e3af995ea20b8e3af1149_cgraph.md5  classEquation_ae57d9bce0f5e3af995ea20b8e3af1149_icgraph.md5  classFunctionDatabase.tex  classFunctionDatabase__coll__graph.md5  classFunctionDatabase_a27bb6cb5f7a69df442c90d379bd30a60_cgraph.md5  classFunctionDatabase_a728aaf92c5942634644b52fe99f73c05_icgraph.md5  classFunctionDatabase_ab02cb65a9009ad0fc61f68c24f3fdc45_cgraph.md5  classFunctionDatabase_af96fd17832dacf34186ea31b7bb74697_icgraph.md5  classInvJacApp.tex  classInvJacApp__coll__graph.md5  classInvJacApp_ad49e850214c7194442c91e8f9fc7fd42_cgraph.md5  (+118 more)
docs/results/: index.html
generator/: first_list.py  second_list.py
phc/: CMakeLists.txt
source/: application.hpp  checker.hpp  equation.cpp  equation.hpp  main.cpp  map.cpp  map.hpp  map_factory.cpp  map_factory.hpp  mysql.hpp  phc_traits.cpp  phc_traits.hpp  phc_wrapper.cpp  phc_wrapper.hpp  point.cpp  point.hpp  point_factory.cpp  point_factory.hpp  polynomial.cpp  solver.cpp  solver.hpp  symbol.cpp  symbol.hpp
tests/: test_application.cpp  test_checker.cpp  test_equation.cpp  test_map_factory.cpp  test_mysql.cpp  test_phc_wrapper.cpp  test_point.cpp  test_point_factory.cpp  test_polynomial.cpp
(+69 files in other folders)
